--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
 controllers:
     resource: ../src/Controller/
     type: attribute
+
+app_lucky_number:
+    path: /luck
+    controller: App\Controller\LuckyController::number
+
+app_stimulus:
+    path: /stim
+    controller: App\Controller\StimulusLController::stimulus
