--- a/.env
+++ b/.env
@@ -22,7 +22,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 APP_ENV=dev
 APP_SECRET=fd255cb01c1fe9f028d626b1116bfed6
 ###< symfony/framework-bundle ###
-
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
@@ -30,6 +29,7 @@ APP_SECRET=fd255cb01c1fe9f028d626b1116bfed6
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+SUPABASE_KEY="KEYFORSUPABASE"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
