--- a/composer.json
+++ b/composer.json
@@ -104,7 +104,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "6.1.*"
         }
     }
