--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.1.1",
         "@vercel/og": "0.0.20",
+        "moment": "^2.29.4",
         "openai": "^3.1.0",
         "prop-types": "^15.8.1",
         "react": "^18.0",
