--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@sendgrid/mail": "^7.7.0",
         "@supabase/supabase-js": "^2.1.1",
         "@vercel/og": "0.0.20",
+        "dotenv": "^16.0.3",
+        "fs": "^0.0.1-security",
         "moment": "^2.29.4",
+        "nodemailer": "^6.8.0",
         "openai": "^3.1.0",
+        "os": "^0.1.2",
+        "path": "^0.12.7",
         "prop-types": "^15.8.1",
         "react": "^18.0",
         "react-dom": "^18.0"
