--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/ux-react": "file:vendor/symfony/ux-react/Resources/assets",
+        "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4.13",
         "core-js": "^3.23.0",
@@ -28,7 +28,8 @@
         "@sendgrid/mail": "^7.7.0",
         "@supabase/supabase-js": "^2.1.1",
         "@vercel/og": "0.0.20",
-        "dotenv": "^16.0.3",
+        "child_process": "^1.0.2",
+        "crypto": "^1.0.1",
         "fs": "^0.0.1-security",
         "moment": "^2.29.4",
         "nodemailer": "^6.8.0",
@@ -37,6 +38,8 @@
         "path": "^0.12.7",
         "prop-types": "^15.8.1",
         "react": "^18.0",
-        "react-dom": "^18.0"
+        "react-dom": "^18.0",
+        "sweetalert2": "^11.6.15",
+        "twilio": "^3.84.0"
     }
 }
