Feat: `/404` and safe secrets in `secrets.json`

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,6 +16,8 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    
+    error_controller: App\Controller\NotFoundController::notFound
 
 when@test:
     framework:
